# neural-decompile

./: .codex-session  .gitignore  BREAKTHROUGH_ANALYSIS.md  Cargo.toml  DECOMPILED-HEAD-2.md  DECOMPILED-HEAD.md  HANDOVER-KANI.md  HANDOVER.md  README.md  TRANSFORMER_VERIFICATION.md  autoresearch_scenarios.md  baseline_eval.py  test_emitted.py  test_rnn_emitted.py  verify_manual.py
examples/: cnn_transformer_spec.json  mod3_add.json  mod3_add_tests.json  mod5_tests.json  mod5_weights.json  parity3.json  parity3_tests.json  parity_transformer.json  parity_transformer_tests.json  train_parity.py
examples/regex/: contains_11.json  contains_11_tests.json  divisible_by_3.json  divisible_by_3_tests.json  (+2 more)
kani-proofs/: Cargo.toml
paper/: compiled-manuscript.md  reproducibility_checklist.md
results/: cross-architecture.md  cross-model-entropy.md  h21_activation_trace.json  h21_full_verification.json  h21_interchange_intervention.json  llama2-7b-L0-heads.txt  llama2-7b-intmap.txt  tinyllama-L0-K-taxonomy.html  tinyllama-intmap.txt  verification.md
scripts/: create_mod7_tests.py  generate_transformer_tests.py  train_binary_add_rnn.py  train_mod7_fast.py  train_mod7_transformer.py  train_simple.py  train_tiny_transformer.py  train_transformer.py  train_transformer_mod.py  train_transformer_v2.py  train_transformer_v3.py
src/: cnn_transformer_task.py  compare.rs  diagnose.rs  diff.rs  emit.rs  evolve.rs  fsm.rs  gguf.rs  intmap.rs  main.rs  patch.rs  quantize.rs  slice.rs  taxonomy.rs  trace.rs  transformer.rs  verify.rs  visualize.rs  weights.rs  xray.rs
(+23 files in other folders)
