[package]
name = "neural-decompile"
version = "0.1.0"
edition = "2021"
description = "Auto-decompile neural network weights into readable code"

[[bin]]
name = "nd"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ndarray = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
